refactor: MenuService 리팩터링