@@ -2,42 +2,22 @@ package kitchenpos.application;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.mockito.BDDMockito.given;
 
 import java.math.BigDecimal;
 import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
 import kitchenpos.common.ServiceTest;
-import kitchenpos.dao.MenuDao;
-import kitchenpos.dao.MenuGroupDao;
-import kitchenpos.dao.MenuProductDao;
-import kitchenpos.dao.ProductDao;
 import kitchenpos.domain.Menu;
+import kitchenpos.domain.MenuGroup;
 import kitchenpos.domain.MenuProduct;
 import kitchenpos.domain.Product;
+import kitchenpos.dto.MenuCreateRequest;
+import kitchenpos.dto.MenuResponse;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
 
 @SuppressWarnings("NonAsciiCharacters")
 class MenuServiceTest extends ServiceTest {
-
-    @InjectMocks
-    private MenuService menuService;
-
-    @Mock
-    private MenuDao menuDao;
-
-    @Mock
-    private MenuGroupDao menuGroupDao;
-
-    @Mock
-    private MenuProductDao menuProductDao;
-
-    @Mock
-    private ProductDao productDao;
 
     @Nested
     class create_성공_테스트 {
@@ -45,25 +25,20 @@ class MenuServiceTest extends ServiceTest {
         @Test
         void 메뉴를_생성하다() {
             // given
-            final var product1 = new Product("상품_이름1", BigDecimal.valueOf(1000));
-            final var product2 = new Product("상품_이름2", BigDecimal.valueOf(200));
-            final var menuProduct1 = new MenuProduct(1L, 1L, 10);
-            final var menuProduct2 = new MenuProduct(1L, 2L, 5);
-            final var menu = new Menu("메뉴_이름", BigDecimal.valueOf(11000L), 1L, List.of(menuProduct1, menuProduct2));
-
-            given(productDao.findById(1L)).willReturn(Optional.of(product1));
-            given(productDao.findById(2L)).willReturn(Optional.of(product2));
-            given(menuGroupDao.existsById(1L)).willReturn(true);
-            given(menuDao.save(menu)).willReturn(menu);
-            given(menuProductDao.save(menuProduct1)).willReturn(menuProduct1);
-            given(menuProductDao.save(menuProduct2)).willReturn(menuProduct2);
+            productDao.save(new Product("상품_이름1", BigDecimal.valueOf(1000)));
+            productDao.save(new Product("상품_이름2", BigDecimal.valueOf(200)));
+            menuGroupDao.save(new MenuGroup("메뉴_그룹_이름"));
+            menuDao.save(new Menu("메뉴_이름", BigDecimal.valueOf(11000L), 1L, Collections.emptyList()));
+            final var menuProduct1 = menuProductDao.save(new MenuProduct(1L, 1L, 10));
+            final var menuProduct2 = menuProductDao.save(new MenuProduct(1L, 2L, 5));
+            final var request = new MenuCreateRequest("메뉴_이름", BigDecimal.valueOf(11000L), 1L,
+                    List.of(menuProduct1, menuProduct2));
 
             // when
-            final var actual = menuService.create(menu);
+            final var actual = menuService.create(request);
 
             // then
-            assertThat(actual).usingRecursiveComparison()
-                    .isEqualTo(menu);
+            assertThat(actual.getId()).isExactlyInstanceOf(Long.class);
         }
     }
 
@@ -71,48 +46,48 @@ class MenuServiceTest extends ServiceTest {
     class create_실패_테스트 {
 
         @Test
-        void 가격이_존재하지_않으면_에러를_반환한다() {
-            // given
-            final var menu = new Menu("메뉴_이름", null, 1L, Collections.emptyList());
-
-            // when & then
-            assertThatThrownBy(() -> menuService.create(menu))
-                    .isInstanceOf(IllegalArgumentException.class)
-                    .hasMessage("[ERROR] 메뉴의 금액이 없거나, 음수입니다.");
-        }
-
-        @Test
-        void 가격이_0보다_작으면_에러를_반환한다() {
-            // given
-            final var menu = new Menu("메뉴_이름", BigDecimal.valueOf(-1000), 1L, Collections.emptyList());
-
-            // when & then
-            assertThatThrownBy(() -> menuService.create(menu))
-                    .isInstanceOf(IllegalArgumentException.class)
-                    .hasMessage("[ERROR] 메뉴의 금액이 없거나, 음수입니다.");
-        }
-
-        @Test
         void 존재하지_않은_메뉴_그룹을_사용하면_에러를_반환한다() {
             // given
-            final var menu = new Menu("메뉴_이름", BigDecimal.valueOf(1000), 1L, Collections.emptyList());
+            final var request = new MenuCreateRequest("메뉴_이름", BigDecimal.valueOf(1000), 1L, Collections.emptyList());
 
             // when & then
-            assertThatThrownBy(() -> menuService.create(menu))
+            assertThatThrownBy(() -> menuService.create(request))
                     .isInstanceOf(IllegalArgumentException.class)
                     .hasMessage("[ERROR] 존재하지 않는 메뉴 그룹입니다.");
         }
 
         @Test
-        void 존재하지_않는_상품을_사용하면_에러를_반환한다() {
+        void 가격이_존재하지_않으면_에러를_반환한다() {
             // given
-            final var menuProduct1 = new MenuProduct(1L, 1L, 10);
-            final var menu = new Menu("메뉴_이름", BigDecimal.valueOf(1000), 1L, List.of(menuProduct1));
-
-            given(menuGroupDao.existsById(1L)).willReturn(true);
+            menuGroupDao.save(new MenuGroup("메뉴_그룹_이름"));
+            final var request = new MenuCreateRequest("메뉴_이름", null, 1L, Collections.emptyList());
 
             // when & then
-            assertThatThrownBy(() -> menuService.create(menu))
+            assertThatThrownBy(() -> menuService.create(request))
+                    .isInstanceOf(NullPointerException.class);
+        }
+
+        @Test
+        void 가격이_0보다_작으면_에러를_반환한다() {
+            // given
+            menuGroupDao.save(new MenuGroup("메뉴_그룹_이름"));
+            final var request = new MenuCreateRequest("메뉴_이름", BigDecimal.valueOf(-1000), 1L, Collections.emptyList());
+
+            // when & then
+            assertThatThrownBy(() -> menuService.create(request))
+                    .isInstanceOf(IllegalArgumentException.class)
+                    .hasMessage("[ERROR] 메뉴의 금액이 없거나, 음수입니다.");
+        }
+
+        @Test
+        void 존재하지_않는_상품을_사용하면_에러를_반환한다() {
+            // given
+            menuGroupDao.save(new MenuGroup("메뉴_그룹_이름"));
+            final var menuProduct1 = new MenuProduct(1L, 1L, 10);
+            final var request = new MenuCreateRequest("메뉴_이름", BigDecimal.valueOf(1000), 1L, List.of(menuProduct1));
+
+            // when & then
+            assertThatThrownBy(() -> menuService.create(request))
                     .isInstanceOf(IllegalArgumentException.class)
                     .hasMessage("[ERROR] 존재하지 않는 상품입니다.");
         }
@@ -120,12 +95,11 @@ class MenuServiceTest extends ServiceTest {
         @Test
         void 메뉴의_총_가격이_각_상품의_합보다_크면_에러를_반환한다() {
             // given
-            final var menu = new Menu("메뉴_이름", BigDecimal.valueOf(1000), 1L, Collections.emptyList());
-
-            given(menuGroupDao.existsById(1L)).willReturn(true);
+            menuGroupDao.save(new MenuGroup("메뉴_그룹_이름"));
+            final var request = new MenuCreateRequest("메뉴_이름", BigDecimal.valueOf(1000), 1L, Collections.emptyList());
 
             // when & then
-            assertThatThrownBy(() -> menuService.create(menu))
+            assertThatThrownBy(() -> menuService.create(request))
                     .isInstanceOf(IllegalArgumentException.class)
                     .hasMessage("[ERROR] 총 금액이 각 상품의 합보다 큽니다.");
         }
@@ -136,10 +110,7 @@ class MenuServiceTest extends ServiceTest {
 
         @Test
         void 메뉴_목록이_존재하지_않으면_빈_값을_반환한다() {
-            // given
-            given(menuService.list()).willReturn(Collections.emptyList());
-
-            // when
+            // given & when
             final var actual = menuService.list();
 
             // then
@@ -149,10 +120,10 @@ class MenuServiceTest extends ServiceTest {
         @Test
         void 메뉴가_하나_이상_존재하면_메뉴_목록을_반환한다() {
             // given
-            final var menu = new Menu("메뉴_이름", BigDecimal.valueOf(1000), 1L, Collections.emptyList());
-            given(menuService.list()).willReturn(List.of(menu));
-
-            final var expected = List.of(menu);
+            menuGroupDao.save(new MenuGroup("메뉴_그룹_이름"));
+            final var menu = menuDao.save(new Menu("메뉴_이름", BigDecimal.valueOf(1000), 1L, Collections.emptyList()));
+            final var response = MenuResponse.toResponse(menu);
+            final var expected = List.of(response);
 
             // when
             final var actual = menuService.list();
